# eu_corpus_compiler

./: .gitignore  README.md  data_model.py  get_cellar_docs.py  get_cellar_ids.py  get_text_from_cellar_files.py  main.py  pyproject.toml
queries/sparql_queries/: financial_domain_sparql_2019-01-07.rq  formex4.rq  formex4_celex.rq  generic.rq  in_force_directives.rq  legal_acts.rq  regulations.rq  specific_CELEX.rq
