[tool.poetry]
name = "eu-corpus-compiler"
version = "1.0.0"
description = ""
authors = ["AlessioNar <alessio.nardin@gmail.com>", "seljaseppala"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
spacy = "^3.7.6"
sparqlwrapper = "^2.0.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
